Read / write fisier format propriu
+ multiple bug fix-uri